created: Users (Entity & Repo) | added: Dependency Injection with Tsyringe
