# src/modules/accounts/entities/User.ts
@@ -1,16 +1,28 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
 
-@Entity('specifications')
-class Specification {
+@Entity('users')
+class User {
   @PrimaryColumn()
-  id?: string;
+  id: string;
 
   @Column()
   name: string;
 
   @Column()
-  description: string;
+  email: string;
+
+  @Column()
+  username: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  driver_license: string;
+
+  @Column()
+  idAdmin: boolean;
 
   @CreateDateColumn()
   created_at: Date;
@@ -22,4 +34,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
